Refactor user model by removing notifications relationship; update filesystem config to add avatar storage; create institution management API with full CRUD operations; implement user profile management API; add event and listener for logbook access notifications; create notification classes for general and logbook access notifications; set up broadcasting channels for user and logbook template notifications; migrate notifications table with new structure; update routes for API and broadcasting; add event service provider for handling logbook access events.

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,16 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
+# Broadcasting Configuration (for realtime notifications)
+BROADCAST_DRIVER=pusher
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
+
 CACHE_STORE=database
 # CACHE_PREFIX=
 
