Add email verification system documentation and quickstart guide
- Created comprehensive documentation for email verification using Brevo SMTP in `EMAIL_VERIFICATION.md`
- Added quick setup guide in `EMAIL_VERIFICATION_QUICKSTART.md`
- Updated environment configuration instructions and required variables checklist
- Documented API endpoints for registration, email verification, and status checks
- Included troubleshooting tips and production deployment checklist

--- a/.env.production
+++ b/.env.production
@@ -11,7 +11,7 @@ APP_NAME="Log Generator API"
 APP_ENV=production
 APP_KEY=base64:mZD0iPN4NEK4nb+gTpbepuTvBoaiThW79CvZyeFh244=
 APP_DEBUG=false
-APP_URL=https:fazcreateve.my.id
+APP_URL=https://fazcreateve.my.id
 APP_TIMEZONE=Asia/Jakarta
 
 APP_LOCALE=en
